Replace button tags with a tags

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <body>
   <header>
-    <nav>
+    <nav class="nav-container">
       <div class="nav-left">
-        <button class="home-button">Home</button>
-        <button class="products-button">Products</button>
+        <a class="home-button">Home</a>
+        <a class="products-button">Products</a>
       </div>
       <img class="logo" src="./assets/logo.svg" alt="Style.Loom Logo">
       <div class="nav-right">
-        <button class="cart-button">
+        <a class="cart-button">
           <img src="./assets/cart.svg" alt="Cart Icon">
-        </button>
-        <button class="contact-button">Contact</button>
+        </a>
+        <a class="contact-button">Contact</a>
       </div>
     </nav>
   </header>
