--- a/index.html
+++ b/index.html
@@ -30,7 +30,50 @@
     <section></section>
     <section></section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="socials">
+      <img src="./assets/logo.svg" alt="Style.Loom Logo" class="logo">
+      <div class="social-links">
+        <a href="#"><img src="./assets/social_icon_1.svg"></a>
+        <a href="#"><img src="./assets/social_icon_2.svg"></a>
+        <a href="#"><img src="./assets/social_icon_3.svg"></a>
+        <a href="#"><img src="./assets/social_icon_4.svg"></a>
+      </div>
+    </div>
+    <div class="newsletter">
+      <div class="home">
+        <h3>Home</h3>
+        <ul>
+          <li>Why Us</li>
+          <li>About Us</li>
+          <li>Testimonials</li>
+          <li>FAQ’s</li>
+        </ul>
+      </div>
+      <div class="products">
+        <h3>Products</h3>
+        <ul>
+          <li>Menswear</li>
+          <li>Womenswear</li>
+          <li>Kidswear</li>
+        </ul>
+      </div>
+      <div class="subscribe">
+        <h3>Subscribe to Newsletter</h3>
+        <div class="subscribe-input">
+          <input type="email" placeholder="Your Email" name="email" id="email" autocomplete="email">
+          <button type="submit"><img src="./assets/subscribe.svg"></button>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>© 2024 StyleLoom. All rights reserved.</p>
+      <div>
+        <span class="terms-and-conditions">Terms & Conditions</span>
+        <span class="privacy-policy">Privacy Policy</span>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
