Add hero section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <title>Style.Loom - Ecommerce Website</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -25,7 +28,41 @@
     </nav>
   </header>
   <main>
-    <section></section>
+    <section class="hero">
+      <div class="hero-image">
+        <img src="./assets/section_1_image.png">
+      </div>
+      <button class="shop-now-btn">
+        Shop Now 
+        <img src="./assets/shop_icon.svg">
+      </button>
+      <div class="hero-content">
+        <div class="hero-btns">
+          <div class="hero-btn">All</div>
+          <div class="hero-btn">Mens</div>
+          <div class="hero-btn">Womens</div>
+          <div class="hero-btn">Kids</div>
+        </div>
+        <h2>ELEVATE YOUR STYLE WITH STYLELOOM</h2>
+        <p>Explore a world of fashion at StyleLoom, where trends meet affordability. Immerse yourself in the latest styles and seize exclusive promotions.</p>
+      </div>
+      <div class="hero-box box-1">
+        <h2>1,500 +</h2>
+        <p>Fashion Products</p>
+      </div>
+      <div class="hero-box box-2">
+        <h2>50 +</h2>
+        <p>New arrivals every month.</p>
+      </div>
+      <div class="hero-box box-3">
+        <h2>30%</h2>
+        <p>OFF on select items.</p>
+      </div>
+      <div class="hero-box box-4">
+        <h2>95%</h2>
+        <p>Customer Satisfaction Rate</p>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
