Add trends section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;500&display=swap"
+    rel="stylesheet">
   <title>Style.Loom - Ecommerce Website</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -33,7 +35,7 @@
         <img src="./assets/section_1_image.png">
       </div>
       <button class="shop-now-btn">
-        Shop Now 
+        Shop Now
         <img src="./assets/shop_icon.svg">
       </button>
       <div class="hero-content">
@@ -44,7 +46,8 @@
           <div class="hero-btn">Kids</div>
         </div>
         <h2>ELEVATE YOUR STYLE WITH STYLELOOM</h2>
-        <p>Explore a world of fashion at StyleLoom, where trends meet affordability. Immerse yourself in the latest styles and seize exclusive promotions.</p>
+        <p>Explore a world of fashion at StyleLoom, where trends meet affordability. Immerse yourself in the latest
+          styles and seize exclusive promotions.</p>
       </div>
       <div class="hero-box box-1">
         <h2>1,500 +</h2>
@@ -63,7 +66,48 @@
         <p>Customer Satisfaction Rate</p>
       </div>
     </section>
-    <section></section>
+    <section class="trends">
+      <div class="trends-header">
+        <h2>CRAFTING TRENDS, INSPIRING CONFIDENCE</h2>
+        <p>Explore a world of fashion at StyleLoom, where trends meet affordability.</p>
+      </div>
+      <div class="trends-box box-1">
+        <img src="./assets/trends_bg_1.svg" class="trends-bg">
+        <img src="./assets/trends_icon_1.svg" class="trends-icon">
+        <h3>Passionate Craftsmanship</h3>
+        <p>Every garment at StyleLoom is crafted with passion, reflecting our commitment to quality and innovation.</p>
+      </div>
+      <div class="trends-box box-2">
+        <img src="./assets/trends_bg_2.svg" class="trends-bg">
+        <img src="./assets/trends_icon_2.svg" class="trends-icon">
+        <h3>Fashion Forward</h3>
+        <p>We're more than a brand; we're trendsetters, curating styles that empower and inspire confidence.</p>
+      </div>
+      <div class="trends-box box-3">
+        <img src="./assets/trends_bg_3.svg" class="trends-bg">
+        <img src="./assets/trends_icon_3.svg" class="trends-icon">
+        <h3>Customer-Centric Approach</h3>
+        <p>At StyleLoom, our customers are at the heart of everything we do. Your satisfaction is our measure of success.</p>
+      </div>
+      <div class="trends-box box-4">
+        <img src="./assets/trends_bg_4.svg" class="trends-bg">
+        <img src="./assets/trends_icon_4.svg" class="trends-icon">
+        <h3>Global Inspiration</h3>
+        <p>Influenced by global trends, we bring you a diverse and dynamic collection, embodying the spirit of fashion from around the world.</p>
+      </div>
+      <div class="trends-box box-5">
+        <img src="./assets/trends_bg_5.svg" class="trends-bg">
+        <img src="./assets/trends_icon_5.svg" class="trends-icon">
+        <h3>Empowering Your Style</h3>
+        <p>Beyond clothing, StyleLoom is a lifestyle. Join us on a journey of self-expression and empowerment through fashion.</p>
+      </div>
+      <div class="trends-box box-6">
+        <img src="./assets/trends_bg_6.svg" class="trends-bg">
+        <img src="./assets/trends_icon_6.svg" class="trends-icon">
+        <h3>Sustainable Practices</h3>
+        <p>StyleLoom is committed to sustainability, integrating eco-friendly practices into our production process.</p>
+      </div>
+    </section>
     <section></section>
     <section></section>
   </main>
