Add questions section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,44 @@
       </div>
     </section>
     <section></section>
-    <section></section>
+    <section class="questions">
+      <div class="questions-header">
+        <img src="./assets/questions_icon.svg" class="questions-icon">
+        <h2>HAVE QUESTIONS? WE HAVE ANSWERS.</h2>
+        <p>Explore a world of fashion at StyleLoom, where trends meet affordability.</p>
+        <div class="questions-btns">
+          <div class="questions-btn">All</div>
+          <div class="questions-btn">Ordering</div>
+          <div class="questions-btn">Shipping</div>
+          <div class="questions-btn">Returns</div>
+          <div class="questions-btn">Support</div>
+        </div>
+      </div>
+      <div class="questions-box box-1">
+        <h3>How can I place an order on StyleLoom?</h3>
+        <p>Ordering is easy! Simply browse our website, add items to your cart, and proceed to checkout. Follow the prompts to enter your details and complete your purchase.</p>
+      </div>
+      <div class="questions-box box-2">
+        <h3>Can I modify or cancel my order after placing it?</h3>
+        <p>Unfortunately, once an order is confirmed, modifications or cancellations may not be possible. Please review your order carefully before completing the purchase.</p>
+      </div>
+      <div class="questions-box box-3">
+        <h3>What payment methods do you accept?</h3>
+        <p>We accept a variety of payment methods, including credit/debit cards, net banking, and select digital wallets. Choose the option that suits you best during checkout.</p>
+      </div>
+      <div class="questions-box box-4">
+        <h3>How do I initiate a return?</h3>
+        <p>Visit our Returns page and follow the provided instructions. Ensure your item meets our return criteria, and our team will guide you through the process.</p>
+      </div>
+      <div class="questions-box box-5">
+        <h3>How can I track my order?</h3>
+        <p>Once your order is dispatched, you'll receive a tracking number via email. Use this number to track your package in real-time on our website.</p>
+      </div>
+      <div class="questions-box box-6">
+        <h3>Do you offer exchanges for products?</h3>
+        <p>At this time, we don't offer direct product exchanges. If you'd like a different item, please initiate a return and place a new order.</p>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="socials">
