Add collection section

--- a/index.html
+++ b/index.html
@@ -87,19 +87,22 @@
         <img src="./assets/trends_bg_3.svg" class="trends-bg">
         <img src="./assets/trends_icon_3.svg" class="trends-icon">
         <h3>Customer-Centric Approach</h3>
-        <p>At StyleLoom, our customers are at the heart of everything we do. Your satisfaction is our measure of success.</p>
+        <p>At StyleLoom, our customers are at the heart of everything we do. Your satisfaction is our measure of
+          success.</p>
       </div>
       <div class="trends-box box-4">
         <img src="./assets/trends_bg_4.svg" class="trends-bg">
         <img src="./assets/trends_icon_4.svg" class="trends-icon">
         <h3>Global Inspiration</h3>
-        <p>Influenced by global trends, we bring you a diverse and dynamic collection, embodying the spirit of fashion from around the world.</p>
+        <p>Influenced by global trends, we bring you a diverse and dynamic collection, embodying the spirit of fashion
+          from around the world.</p>
       </div>
       <div class="trends-box box-5">
         <img src="./assets/trends_bg_5.svg" class="trends-bg">
         <img src="./assets/trends_icon_5.svg" class="trends-icon">
         <h3>Empowering Your Style</h3>
-        <p>Beyond clothing, StyleLoom is a lifestyle. Join us on a journey of self-expression and empowerment through fashion.</p>
+        <p>Beyond clothing, StyleLoom is a lifestyle. Join us on a journey of self-expression and empowerment through
+          fashion.</p>
       </div>
       <div class="trends-box box-6">
         <img src="./assets/trends_bg_6.svg" class="trends-bg">
@@ -108,7 +111,91 @@
         <p>StyleLoom is committed to sustainability, integrating eco-friendly practices into our production process.</p>
       </div>
     </section>
-    <section></section>
+    <section class="collection">
+      <div class="collection-header">
+        <img src="./assets/collection_icon.svg" class="collection-icon">
+        <h2>ELEVATE YOUR STYLE WITH OUR LATEST COLLECTION</h2>
+        <p>Each piece is crafted to enhance your fashion statement.</p>
+        <div class="collection-btns">
+          <div class="collection-btn">All</div>
+          <div class="collection-btn">Mens</div>
+          <div class="collection-btn">Womens</div>
+          <div class="collection-btn">Kids</div>
+        </div>
+      </div>
+      <div class="collection-box box-1">
+        <img src="./assets/Image_1.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Womenswear</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Timeless A-line Evening Dress</h3>
+        <p><span class="property">Fit •</span><span class="value">Ankle-length</span><span class="property">Price •</span><span class="value">$109.99</span></p>
+      </div>
+      <div class="collection-box box-2">
+        <img src="./assets/Image_2.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Womenswear</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Floral Bloom Maxi Dress</h3>
+        <p><span class="property">Fit •</span><span class="value">Slim Fit</span><span class="property">Price •</span><span class="value">$54.99</span></p>
+      </div>
+      <div class="collection-box box-3">
+        <img src="./assets/Image_3.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Womenswear</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Elegant Evening Gown</h3>
+        <p><span class="property">Fit •</span><span class="value">Flowing skirt</span><span class="property">Price •</span><span class="value">$89.99</span></p>
+      </div>
+      <div class="collection-box box-4">
+        <img src="./assets/Image_4.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Accessories</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Urban Chic Handbag</h3>
+        <p><span class="property">Fit •</span><span class="value">Spacious</span><span class="property">Price •</span><span class="value">$49.99</span></p>
+      </div>
+      <div class="collection-box box-5">
+        <img src="./assets/Image_5.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Accessories</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Sophisticate Sun Hat</h3>
+        <p><span class="property">Fit •</span><span class="value">One size fits all</span><span class="property">Price •</span><span class="value">$24.99</span></p>
+      </div>
+      <div class="collection-box box-6">
+        <img src="./assets/Image_6.png" class="collection-image">
+        <div class="details-container">
+          <div class="tag">Womenswear</div>
+          <button class="shop-now-btn">
+            Shop Now
+            <img src="./assets/shop_icon.svg">
+          </button>
+        </div>
+        <h3>Boho Chic Printed Scarf</h3>
+        <p><span class="property">Fit •</span><span class="value">Lightweight</span><span class="property">Price •</span><span class="value">$19.99</span></p>
+      </div>
+    </section>
     <section class="questions">
       <div class="questions-header">
         <img src="./assets/questions_icon.svg" class="questions-icon">
@@ -124,27 +211,33 @@
       </div>
       <div class="questions-box box-1">
         <h3>How can I place an order on StyleLoom?</h3>
-        <p>Ordering is easy! Simply browse our website, add items to your cart, and proceed to checkout. Follow the prompts to enter your details and complete your purchase.</p>
+        <p>Ordering is easy! Simply browse our website, add items to your cart, and proceed to checkout. Follow the
+          prompts to enter your details and complete your purchase.</p>
       </div>
       <div class="questions-box box-2">
         <h3>Can I modify or cancel my order after placing it?</h3>
-        <p>Unfortunately, once an order is confirmed, modifications or cancellations may not be possible. Please review your order carefully before completing the purchase.</p>
+        <p>Unfortunately, once an order is confirmed, modifications or cancellations may not be possible. Please review
+          your order carefully before completing the purchase.</p>
       </div>
       <div class="questions-box box-3">
         <h3>What payment methods do you accept?</h3>
-        <p>We accept a variety of payment methods, including credit/debit cards, net banking, and select digital wallets. Choose the option that suits you best during checkout.</p>
+        <p>We accept a variety of payment methods, including credit/debit cards, net banking, and select digital
+          wallets. Choose the option that suits you best during checkout.</p>
       </div>
       <div class="questions-box box-4">
         <h3>How do I initiate a return?</h3>
-        <p>Visit our Returns page and follow the provided instructions. Ensure your item meets our return criteria, and our team will guide you through the process.</p>
+        <p>Visit our Returns page and follow the provided instructions. Ensure your item meets our return criteria, and
+          our team will guide you through the process.</p>
       </div>
       <div class="questions-box box-5">
         <h3>How can I track my order?</h3>
-        <p>Once your order is dispatched, you'll receive a tracking number via email. Use this number to track your package in real-time on our website.</p>
+        <p>Once your order is dispatched, you'll receive a tracking number via email. Use this number to track your
+          package in real-time on our website.</p>
       </div>
       <div class="questions-box box-6">
         <h3>Do you offer exchanges for products?</h3>
-        <p>At this time, we don't offer direct product exchanges. If you'd like a different item, please initiate a return and place a new order.</p>
+        <p>At this time, we don't offer direct product exchanges. If you'd like a different item, please initiate a
+          return and place a new order.</p>
       </div>
     </section>
   </main>
